# ProgrammingLanguages

./: .gitignore
Assembly/: assembly.txt
Assembly/NASM X86/: firstprogram.asm
Bash/: firstprogram.sh
Bash/ControlStructures/: case.sh  cstylefor.sh  for.sh  if.sh  logicaloperators.sh  ternarylike.sh
Bash/Functions/: arguments.sh  functions  recursion.sh  trap.sh
Bash/Language/Arrays/: addelem.sh  declaring.sh
Bash/Language/ControlStructures/: breakcontinue.sh  controlflow  doublesquare.sh  function.sh  testconditions  until.sh  while.sh
Bash/Language/Functions/: export.sh  function.sh  return.sh  returnecho.sh
Bash/Variables/: environment.sh  readonly.sh  unsetting.sh
C++/Arrays/: arraywithfunctions.cpp  multidimensional.cpp
C++/Classes/: inheritance.cpp  member.cpp  polymorphism.cpp
C++/Conditonals/: elseif.cpp  if.cpp  switch.cpp
C++/Constructors/: Copy.cpp  Default.cpp  Move.cpp  defaultdelete.cpp
C++/ErrorHandling/: exceptions.cpp
C++/Functions/: lambdawithexplcitereturn.cpp  lambdawithfunctionarg.cpp  lamdbawithcapturebyvalue.cpp  simplefunction.cpp
C++/Inputs/: errorhandling.cpp  inputs.cpp
C++/Interface/: methodwithinheritance.cpp  purevirutalfunction.cpp
C++/Language/: firstprogram.cpp
C++/Loops/: While.cpp  dowhile.cpp  mulitvariable.cpp  withbreak.cpp  withcontinue.cpp
C++/Outputs/: floatingpointpercision.cpp  newlines.cpp  outputdiffdatatypes.cpp
C++/Pointers/: declaration.cpp  functionpointers.cpp  pointerarithmetic.cpp  pointerswitharrays.cpp  pointerwithpointer.cpp  smartpointershared.cpp  smartpointerunique.cpp
C++/Vectors/: add.cpp  vectordeclaration.cpp
C/Array/: arrayswithfunction.c  stringarrays.c
C/Conditionals/: elseif.c  if.c  ifelse.c  switch.c
C/DataTypes/: types.c
C/ErrorHandling/: errnoperror.c
C/Functions/: functionpointers.c  inlinefunctions.c  passbyreference.c  recursion.c  simplefunction.c  variadicfunctions.c
C/Input/: standardingetchar.c  standardinscanf.c  sumcommandline.c
C/Language/: firstprogram.c
C/Loops/: WithBreak.c  WithContinue.c
C/Outputs/: output.cpp  outputtofile.cpp  outputwithpercision.cpp  printf.cpp
C/Pointers/: Pointersarrays.c  pointers.c  pointerwithpointers.c  voidpointers2.c
C/Structs/: accessingstructures.c  nestingstructures.c
Flex&Bison/Example/: lang  lang.l  lang.output  lang.tab.c  lang.tab.h  lang.y  lex.yy.c  program.txt
GL/Vulkan/Triangle/glfw/: CMakeLists.txt
Go/Arrays/: arrays.go
Go/Concurrency/: select.go
Go/Conditionals/: goto.go  ifelse.go
Go/FirstPrograms/: main.go
Go/Functions/: funcasparameter.go  multireturn.go  noreturn.go  simplefunction.go  variadic.go
Go/Interfaces/: types.go  typeswitch.go
Go/Maps/: map.go  test.go  test1.go  test4.go
Go/Pointers/: nilpointers.go  pointers.go  pointers2.go
Go/Slices/: slices.go  slices2.go
Go/Structs/: methods.go
Go/errorhandling/: errorhanding.go
Haskell/: firstprogram2.hs
Haskell/DO/: io.hs
Haskell/DataTypes/: newtypes.hs  primitives.hs
Haskell/ErrorHandling/: maybe.hs  monad.hs
Haskell/Functions/: declarations.hs  pointfreeimplicit.hs  recursion.hs
Haskell/Monads/: Statetransformer.hs  io.hs  list.hs
Haskell/Structures/: sequences.hs  trees.hs  tuples.hs
Java/: HelloWorld.java
Java/Classes/: Main.java  MyClass.java
OpenAL/Examples/SoundEffects/: CMakeLists.txt  main.cpp
OpenAL/Examples/WaveformDisplay/: CMakeLists.txt  main.cpp  text.txt
OpenGL/: .gitignore
OpenGL/Cube/: CMakeLists.txt  main.cpp  text.txt
OpenGL/Examples/: deletebuilds.sh  maketextures.py
OpenGL/Examples/Input/Cube/: CMakeLists.txt  main.cpp  text.txt
OpenGL/Examples/Shaders/Compute/MutipleFractalsEffects/: CMakeLists.txt  text.txt
OpenGL/Examples/Shaders/Loading/ShaderFromFile/: CMakeLists.txt
OpenGL/Examples/Shaders/RayTracing/: CMakeLists.txt  main.cpp  text.txt
OpenGL/Examples/Textures/SpinningCude/: CMakeLists.txt  main.cpp  text.txt
OpenGL/Examples/Textures/Square/: CMakeLists.txt
OpenGL/Examples/TieDyeCube/: CMakeLists.txt  main.cpp  text.txt
OpenGL/FirstProgram/: glfwglew.cpp  imguisdlglad.cpp  imguisdlglew.cpp  sdlglad.cpp  sdlglew.cpp
OpenGL/Shaders/Loading/GLSLIncludes/: CMakeLists.txt  main.cpp
OpenGL/Shaders/Loading/GLSLIncludes/shaders/: common.glsl
OpenGL/Shaders/Loading/SpirvShaders/: CMakeLists.txt  main.cpp
OpenGL/Square/: CMakeLists.txt  main.cpp  text.txt
OpenGL/Triangle/: CMakeLists.txt  main.cpp
OpenGL/Triangle/glad/src/: glad.c
OpenGL/glfw/: cmake_uninstall.cmake
Prolog/Backtracking/: conjunction.pl  failedpredicate.pl  rules.pl
Prolog/Cuts/: cutfailpattern.pl  cutwithrules.pl
Prolog/Facts/: compoundfact.pl
Prolog/Language/: first.pl
Prolog/Lists/: builtinpredicate.pl  recursion.pl
Prolog/Negation/: negateionwithrules.pl  negationclosedworld.pl  negationwithvariables.pl
Prolog/Operators/: custom.pl  negation.pl  relational.pl
Prolog/Predicates/: factdefine.pl  logicalpredicate.pl  matchpredicate.pl  recursive.pl
Prolog/Query/: complexquery.pl  negation.pl  simplefactquery.pl  variablequery.pl
Prolog/Rules/: usage.pl
Prolog/Terms/: atoms.pl  comparisons.pl  general.pl  patternmatching.pl
Python/Classes/: encapsulation.py  initmethod.py  overridemethod.py
Python/Conditionals/: elif.py  ifelse.py  logicaloperators.py  walrus.py
Python/ErrorHandling/: multierror.py  raise.py
Python/Functions/: keywordarguments.py  scope.py  withinfunction.py
Python/Loops/: infinitewhile.py  withbreak.py  withpass.py
Rust/Concurrency/: threads.rs
Rust/Contionals/: if.rs  ifelse.rs  matchguards.rs  matchstruct.rs  matchtuple.rs
Rust/ErrorHandling/: custom.rs  operatorqmark.rs  resulttype.rs
Rust/Macros/: declarative.rs  patternmatchdeclaratives.rs  proceduralattribute.rs  proceduralfunction.rs
Rust/Traits/: default.rs  supertraits.rs
Rust/loops/: forrange.rs  loop.rs  returnloops.rs
Vulkan/Examples/Square/: CMakeLists.txt  main.cpp  test.txt  text.txt
Vulkan/Examples/Square/Shaders/: frag.glsl  fragment.glsl  vertex.glsl
Vulkan/Examples/Triangle/: CMakeLists.txt
Vulkan/Triangle/: main.cpp  test.txt
(+350 files in other folders)
